--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
                     />
                   </div>
                   <div class="wpo-service-text text-center mt-2">
-                    <h2>More</h2>
+                    <h2>Etc.</h2>
                   </div>
                 </div>
               </div>
