--- a/wedguide.html
+++ b/wedguide.html
@@ -122,22 +122,14 @@
                                         </div>
                                         <div data-swiper-parallax="400" class="slide-text wow fadeInUp" data-wow-duration="1600ms">
                                             <p>
-                                                We are beyond thrilled to have you join us on our
-                                                                        special day! Your presence means the world to us, and we
-                                                                        can't wait to celebrate this joyous occasion with each
-                                                                        and every one of you.
+                                                With hearts full of joy and gratitude, we invite you to witness the beginning of our forever.
+You have been a part of our journey, through your love, support, and presence, we couldn’t imagine celebrating this day without you.
                                                 <br>
-                                                As we stand togethier to exchange
-                                                                        vows and begin this new chapter in our lives, we are
-                                                                        grateful to have such wonderfil people like you to share
-                                                                        in our happiness. Tour love and support have meant
-                                                                        everything to us, and we are so blessed to have you in
-                                                                        our lives.
+                                                
+                                                As we stand before God and our loved ones to promise a lifetime to each other, we want to honor the people who have shaped our story.
+                                                Your friendship and love have been a blessing, and we are deeply thankful that God has surrounded us with souls who truly care. 
                                                 <br>
-                                                Thank you for being a part of our jourey and
-                                                                        for being here to witness our love and commitment to
-                                                                        each other. Let's make beautiful memories togethier and
-                                                                        celebrate the love that brings us all together.
+                                                Thank you for walking with us, cheering for us, and being part of this chapter. Your presence means more than words can ever express.
                                             </p>
                                         </div>
                                         <div class="shape-2 wow fadeInUp" data-wow-duration="1800ms">
@@ -304,8 +296,8 @@
                                         <img src="assets/images/weddetails/wed-2.png" alt="Group Photos" class="img-fluid"/>
                                     </div>
                                     <div class="wpo-service-text text-center mt-2">
-                                        <h4>Group Photos</h4>
-                                        <p class="d-none d-md-block">Capture memories with everyone.</p>
+                                        <h4>Group Photos </h4>
+                                        <p class="d-none d-md-block">Capture memories with everyone after ceremony.</p>
                                     </div>
                                 </div>
                             </div>
@@ -317,8 +309,8 @@
                                         <img src="assets/images/weddetails/wed-3.png" alt="Cocktail Hour" class="img-fluid"/>
                                     </div>
                                     <div class="wpo-service-text text-center mt-2">
-                                        <h4>Cocktail Hour</h4>
-                                        <p class="d-none d-md-block">Light refreshments and mingling.</p>
+                                        <h4>Photoshoot with Entourage</h4>
+                                        <p class="d-none d-md-block"> Fun and memorable photo session with the entourage after the ceremony.</p>
                                     </div>
                                 </div>
                             </div>
@@ -330,8 +322,8 @@
                                         <img src="assets/images/weddetails/wed-4.png" alt="Dinner" class="img-fluid"/>
                                     </div>
                                     <div class="wpo-service-text text-center mt-2">
-                                        <h4>Dinner</h4>
-                                        <p class="d-none d-md-block">A delicious meal for everyone.</p>
+                                        <h4>Reception</h4>
+                                        <p class="d-none d-md-block"> An exciting and meaningful celebration designed for all to enjoy and take part in..</p>
                                     </div>
                                 </div>
                             </div>
@@ -344,7 +336,7 @@
                                     </div>
                                     <div class="wpo-service-text text-center mt-2">
                                         <h4>Toasts & Speeches</h4>
-                                        <p class="d-none d-md-block">Heartfelt words and stories.</p>
+                                        <p class="d-none d-md-block">Special words and stories from those who’ve been part of the couple’s journey.</p>
                                     </div>
                                 </div>
                             </div>
@@ -382,8 +374,8 @@
                                         <img src="assets/images/weddetails/wed-8.png" alt="Party" class="img-fluid"/>
                                     </div>
                                     <div class="wpo-service-text text-center mt-2">
-                                        <h4>Party & Dancing</h4>
-                                        <p class="d-none d-md-block">Celebrate the night with joy.</p>
+                                        <h4>Singing & Dancing</h4>
+                                        <p class="d-none d-md-block">Celebrate the night with joy. by singing the couple's go to karaoke song "LIGAYA".</p>
                                     </div>
                                 </div>
                             </div>
@@ -509,7 +501,7 @@
 
                                 <p class="mt-3">
                                     Your presence at our wedding is the greatest gift of all.  
-                                              However, if you wish to honor us with a gift, a monetary contribution would be sincerely appreciated.
+                                    Your presence on our special day is the most meaningful gift we could receive. Should you choose to offer a gift, a monetary contribution would be sincerely appreciated.
                                 </p>
                             </div>
                         </div>
@@ -694,7 +686,7 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq1" role="region" aria-labelledby="faq1-label">
-                            The wedding will take place on [Insert Wedding Date]. Please check the Schedule section for exact time and venue details.
+                            The wedding will take place on January 23, 2026. Please check the Schedule section for exact time and venue details.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq2" id="faq2-label">
@@ -702,7 +694,7 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq2" role="region" aria-labelledby="faq2-label">
-                            The ceremony will be held at [Venue Name], located at [Address]. The reception will follow at [Reception Venue].
+                            The ceremony will be held at Iglesia Ni Cristo Lokal ng Madapdap (Guagua Ave. Madapdap Resettlement Mabalacat City Pampanga). The reception will follow at Mamita Private Resort, located at Balwarte, Mabalacat Pampanga.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq3" id="faq3-label">
@@ -710,7 +702,7 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq3" role="region" aria-labelledby="faq3-label">
-                            Please arrive 30 minutes before the ceremony to allow time for seating.
+                            Please arrive 30 minutes before the Reception program to allow time for seating.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq4" id="faq4-label">
@@ -718,7 +710,7 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq4" role="region" aria-labelledby="faq4-label">
-                            The dress code is [Formal / Semi-Formal / Cocktail / Beach Casual]. Dress comfortably but appropriately for the venue and weather.
+                            The dress code is Formal / Semi-Formal. Dress comfortably but appropriately for the venue and weather.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq5" id="faq5-label">
@@ -726,7 +718,7 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq5" role="region" aria-labelledby="faq5-label">
-                            If your invitation includes “and guest,” you may bring a plus one. Otherwise, we kindly request that you attend solo.
+                            If your invitation includes ‘and guest,’ we’d be happy to welcome a plus one. If not, we kindly ask that you join us solo so we can accommodate everyone comfortably..
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq6" id="faq6-label">
@@ -734,23 +726,22 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq6" role="region" aria-labelledby="faq6-label">
-                            This will be an [adults-only / kid-friendly] event. Please refer to your invitation for more details.
+                            We truly wish we could celebrate with everyone, but due to venue limitations, we kindly ask that only adults attend. You may refer to your RSVP for more details.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq7" id="faq7-label">
-                            Will there be food options for dietary restrictions?
+                            Is it required to finish the program?
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq7" role="region" aria-labelledby="faq7-label">
-                            Yes! Let us know your dietary needs on the RSVP form and we’ll accommodate accordingly.
-                        </div>
+                            Yes! Invited guests are special people in the couple’s lives—let’s make them feel just as important and valued as they truly are.                        </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq8" id="faq8-label">
-                            Do you have a gift registry?
+                            When can we give our gifts?
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq8" role="region" aria-labelledby="faq8-label">
-                            Your presence is our gift, but if you’d like to give something, we are registered at [Amazon / Zola / Target, etc.].
+                            Your presence is already a gift to us! But if you'd like to give something, you can personally hand it to the couple at the end of the program—they’d love to thank you in person.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq9" id="faq9-label">
@@ -782,7 +773,7 @@
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq12" role="region" aria-labelledby="faq12-label">
-                            Feel free to contact us at [your email/phone], or reach out to [wedding coordinator's name] for help.
+                            Feel free to contact us on our social media accounts, or reach out to wedding coordinator for help.
                         </div>
                     </section>
 
