--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,22 @@
                       </div>
                       <div class="office-info-text">
                         <h5>Facebook</h5>
-                        <p>Faocci Layug</p>
-                        <p>Rochele Dulu</p>
+                          <p>
+                            <a href="https://www.facebook.com/faocci/" target="_blank" rel="noopener noreferrer"
+                              style="text-decoration: none; color: inherit;"
+                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                              Faocci Layug
+                            </a>
+                          </p>
+                          <p>
+                            <a href="https://www.facebook.com/rochele17" target="_blank" rel="noopener noreferrer"
+                              style="text-decoration: none; color: inherit;"
+                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                              Rochele Dulu
+                            </a>
+                          </p>
                       </div>
                     </div>
                   </div>
@@ -172,8 +186,22 @@
                       </div>
                       <div class="office-info-text">
                         <h5>Email Us</h5>
-                        <p>Faoccilayug@gmail.com</p>
-                        <p>Rocheledulu24@gmail.com</p>
+                          <p>
+                            <a href="mailto:Faoccilayug@gmail.com?subject=Wedding%20Inquiry%20-%20How%20Can%20I%20Help%20You" 
+                              style="text-decoration: none; color: inherit;"
+                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                              Faoccilayug@gmail.com
+                            </a>
+                          </p>
+                          <p>
+                            <a href="mailto:Rocheledulu24@gmail.com?subject=Wedding%20Inquiry%20-%20How%20Can%20I%20Help%20You" 
+                              style="text-decoration: none; color: inherit;"
+                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                              Rocheledulu24@gmail.com
+                            </a>
+                          </p>
                       </div>
                     </div>
                   </div>
@@ -202,8 +230,19 @@
                       </div>
                       <div class="office-info-text">
                         <h5>Call Now</h5>
-                        <p>+63 909 122 6365</p>
-                        <p>+63 976 308 6813</p>
+                          <p><a href="tel:+639091226365" 
+                                style="text-decoration: none; color: inherit;"
+                                onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                                onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                            +63 909 122 6365
+                          </a></p>
+
+                          <p><a href="tel:+639763086813" 
+                                style="text-decoration: none; color: inherit;"
+                                onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                                onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                            +63 976 308 6813
+                          </a></p>
                       </div>
                     </div>
                   </div>
