--- a/wedguide.html
+++ b/wedguide.html
@@ -685,16 +685,20 @@ You have been a part of our journey, through your love, support, and presence, w
                             When is the wedding?
                             <span class="arrow"></span>
                         </button>
+
                         <div class="faq-answer" id="faq1" role="region" aria-labelledby="faq1-label">
-                            The wedding will take place on January 23, 2026. Please check the Schedule section for exact time and venue details.
+                        The wedding will take place on January 23, 2026. 
+                        Please check the <a href="index.html" class="view-details-link">page</a> for exact time and venue details.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq2" id="faq2-label">
                             Where is the wedding located?
                             <span class="arrow"></span>
                         </button>
+
                         <div class="faq-answer" id="faq2" role="region" aria-labelledby="faq2-label">
-                            The ceremony will be held at Iglesia Ni Cristo Lokal ng Madapdap (Guagua Ave. Madapdap Resettlement Mabalacat City Pampanga). The reception will follow at Mamita Private Resort, located at Balwarte, Mabalacat Pampanga.
+                            The ceremony will be held at Iglesia Ni Cristo Lokal ng Madapdap (Guagua Ave. Madapdap Resettlement Mabalacat City Pampanga).<br> The reception will follow at Mamita Private Resort, located at Balwarte, Mabalacat Pampanga. <br> 
+                            <a href="#location" class="view-details-link">Schedule section</a> for exact time and venue details.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq3" id="faq3-label">
@@ -710,7 +714,7 @@ You have been a part of our journey, through your love, support, and presence, w
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq4" role="region" aria-labelledby="faq4-label">
-                            The dress code is Formal / Semi-Formal. Dress comfortably but appropriately for the venue and weather.
+                            The dress code is Formal / Semi-Formal. Dress comfortably but appropriately for the venue and weather. <a href="#attire" class="view-details-link">See Details</a>.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq5" id="faq5-label">
@@ -718,7 +722,7 @@ You have been a part of our journey, through your love, support, and presence, w
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq5" role="region" aria-labelledby="faq5-label">
-                            If your invitation includes ‘and guest,’ we’d be happy to welcome a plus one. If not, we kindly ask that you join us solo so we can accommodate everyone comfortably..
+                            If your invitation (RSVP) includes ‘and guest,’ we’d be happy to welcome a plus one. If not, we kindly ask that you join us solo so we can accommodate everyone comfortably.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq6" id="faq6-label">
@@ -726,7 +730,7 @@ You have been a part of our journey, through your love, support, and presence, w
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq6" role="region" aria-labelledby="faq6-label">
-                            We truly wish we could celebrate with everyone, but due to venue limitations, we kindly ask that only adults attend. You may refer to your RSVP for more details.
+                            We truly wish we could celebrate with everyone, but due to venue limitations, we kindly ask that only adults attend. You may refer to your RSVP for more details. <a href="index.html#rsvp" class="view-details-link">See Details</a>.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq7" id="faq7-label">
@@ -741,7 +745,7 @@ You have been a part of our journey, through your love, support, and presence, w
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq8" role="region" aria-labelledby="faq8-label">
-                            Your presence is already a gift to us! But if you'd like to give something, you can personally hand it to the couple at the end of the program—they’d love to thank you in person.
+                            Your presence is already a gift to us! But if you'd like to give something, monetary gifts are welcome and appreciated. You can personally hand your gift to the couple at the end of the program—they’d love to thank you in person.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq9" id="faq9-label">
@@ -749,7 +753,7 @@ You have been a part of our journey, through your love, support, and presence, w
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq9" role="region" aria-labelledby="faq9-label">
-                            Shuttle service will be available between [Hotel Name] and the venue. See the Travel section for more info.
+                            A jeepney shuttle service will be available to and from the venue. However, due to limited space, not all guests may be accommodated.
                         </div>
 
                         <button class="faq-question" aria-expanded="false" aria-controls="faq10" id="faq10-label">
@@ -773,7 +777,7 @@ You have been a part of our journey, through your love, support, and presence, w
                             <span class="arrow"></span>
                         </button>
                         <div class="faq-answer" id="faq12" role="region" aria-labelledby="faq12-label">
-                            Feel free to contact us on our social media accounts, or reach out to wedding coordinator for help.
+                            Feel free to <a href="contact.html" class="view-details-link">Contact</a>. us on our social media accounts, or reach out to wedding coordinator for help.
                         </div>
                     </section>
 
