--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         scroll-behavior: smooth;
                       "
                     >
-                      <a class="theme-btn" href="#rsvp">RSVP</a>
+                      <a class="theme-btn" href="#rsvp1">RSVP</a>
                     </div>
                     <div
                       class="shape-2 wow fadeInUp"
@@ -832,7 +832,7 @@
       <!-- end wpo-team-section -->
 
       <!-- start of wpo-contact-section -->
-      <section class="wpo-contact-section-s2 section-padding">
+      <section class="wpo-contact-section-s2 section-padding" id="rsvp1">
         <div class="container-fluid">
           <div class="row justify-content-center">
             <div class="col col-xl-4 col-lg-6 col-md-6 col-12">
