--- a/wedguide.html
+++ b/wedguide.html
@@ -1082,9 +1082,9 @@
             role="region"
             aria-labelledby="faq1-label"
           >
-            The wedding will take place on January 23, 2026. Please check the
-            <a href="index.html" class="view-details-link">page</a> for exact
-            time and venue details.
+            The wedding is set for January 23, 2026. Please visit the
+            <a href="index.html" class="view-details-link">details page</a> for
+            the exact time information.
           </div>
 
           <button
@@ -1102,12 +1102,12 @@
             role="region"
             aria-labelledby="faq2-label"
           >
-            The ceremony will be held at Iglesia Ni Cristo Lokal ng Madapdap
-            (Guagua Ave. Madapdap Resettlement, Mabalacat City, Pampanga).<br />
-            The reception will follow at Mamita Private Resort, located in
-            Balwarte, Mabalacat, Pampanga.<br />
+            The ceremony will take place at Iglesia Ni Cristo Lokal ng Madapdap
+            (Guagua Ave., Madapdap Resettlement, Mabalacat City, Pampanga). The
+            reception will follow at Mamita Private Resort, located in Balwarte,
+            Mabalacat, Pampanga. Please see the
             <a href="#location" class="view-details-link">Schedule section</a>
-            for exact time and venue details.
+            for the exact time and venue details.
           </div>
 
           <button
@@ -1318,9 +1318,10 @@
           <div class="container">
             <div class="row">
               <div class="col col-xs-12">
-                <p class="copyright" style="margin-top: 15px">
-                  &copy; 2025 #KhelFaoandtheOne. | All rights reserved. |
-                  <a href="contact.html"> Contact Us </a>
+                <p class="copyright">
+                  <span class="line-item">&copy; 2025 #KhelFaoandtheOne.</span>
+                  <span class="line-item">All rights reserved.</span>
+                  <a href="contact.html" class="line-item">Contact Us</a>
                 </p>
               </div>
             </div>
