Progress as of now

--- a/wedguide.html
+++ b/wedguide.html
@@ -358,7 +358,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-1.png');
                   "
                 ></div>
               </div>
@@ -378,7 +378,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-2.png');
                   "
                 ></div>
               </div>
@@ -398,7 +398,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-3.png');
                   "
                 ></div>
               </div>
@@ -418,7 +418,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-4.png');
                   "
                 ></div>
               </div>
@@ -438,7 +438,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-5.png');
                   "
                 ></div>
               </div>
@@ -455,7 +455,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-6.png');
                   "
                 ></div>
               </div>
@@ -474,7 +474,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-7.png');
                   "
                 ></div>
               </div>
@@ -493,7 +493,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-8.png');
                   "
                 ></div>
               </div>
@@ -510,7 +510,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-9.png');
                   "
                 ></div>
               </div>
@@ -527,7 +527,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-10.png');
                   "
                 ></div>
               </div>
@@ -546,7 +546,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-11.png');
                   "
                 ></div>
               </div>
@@ -565,7 +565,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-12.png');
                   "
                 ></div>
               </div>
@@ -582,7 +582,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-13.png');
                   "
                 ></div>
               </div>
@@ -599,7 +599,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-14.png');
                   "
                 ></div>
               </div>
@@ -616,7 +616,7 @@
                 <div
                   class="media-wrapper"
                   style="
-                    background-image: url('https://images.unsplash.com/photo-1525097487452-6278ff080c31?auto=format&fit=crop&w=800&q=80');
+                    background-image: url('assets/images/weddetails/wed-15.png');
                   "
                 ></div>
               </div>
@@ -633,9 +633,9 @@
         </div>
 
         <style>
-          .timeline-carousel {
+          /* .timeline-carousel {
             margin-top: -15px;
-          }
+          } */
 
           .timeline-carousel__item {
             padding: 0 10px;
