--- a/bride.html
+++ b/bride.html
@@ -195,19 +195,20 @@
           <div class="container">
             <div class="row">
               <div class="col col-xs-12">
-                <p class="copyright" style="margin-top: 15px">
-                  &copy; 2025 #KhelFaondtheOne. | All rights reserved. |
-                  <a href="contact.html">Contact Us</a>
+                <p class="copyright">
+                  <span class="line-item">&copy; 2025 #KhelFaoandtheOne.</span>
+                  <span class="line-item">All rights reserved.</span>
+                  <a href="contact.html" class="line-item">Contact Us</a>
                 </p>
               </div>
             </div>
           </div>
         </div>
         <div class="ft-shape-1">
-          <img src="assets/images/footer-shape-1.svg" alt="Footer Shape 1" />
+          <img src="assets/images/footer-shape-1.svg" alt="" />
         </div>
         <div class="ft-shape-2">
-          <img src="assets/images/footer-shape-2.svg" alt="Footer Shape 2" />
+          <img src="assets/images/footer-shape-2.svg" alt="" />
         </div>
       </footer>
     </div>
