--- a/contact.html
+++ b/contact.html
@@ -142,22 +142,30 @@
                       </div>
                       <div class="office-info-text">
                         <h5>Facebook</h5>
-                          <p>
-                            <a href="https://www.facebook.com/faocci/" target="_blank" rel="noopener noreferrer"
-                              style="text-decoration: none; color: inherit;"
-                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
-                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
-                              Faocci Layug
-                            </a>
-                          </p>
-                          <p>
-                            <a href="https://www.facebook.com/rochele17" target="_blank" rel="noopener noreferrer"
-                              style="text-decoration: none; color: inherit;"
-                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
-                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
-                              Rochele Dulu
-                            </a>
-                          </p>
+                        <p>
+                          <a
+                            href="https://www.facebook.com/faocci/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            style="text-decoration: none; color: inherit"
+                            onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                            onmouseout="this.style.textDecoration='none'; this.style.color='inherit';"
+                          >
+                            Faocci Layug
+                          </a>
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.facebook.com/rochele17"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            style="text-decoration: none; color: inherit"
+                            onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                            onmouseout="this.style.textDecoration='none'; this.style.color='inherit';"
+                          >
+                            Rochele Dulu
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -186,22 +194,26 @@
                       </div>
                       <div class="office-info-text">
                         <h5>Email Us</h5>
-                          <p>
-                            <a href="mailto:Faoccilayug@gmail.com?subject=Wedding%20Inquiry%20-%20How%20Can%20I%20Help%20You" 
-                              style="text-decoration: none; color: inherit;"
-                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
-                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
-                              Faoccilayug@gmail.com
-                            </a>
-                          </p>
-                          <p>
-                            <a href="mailto:Rocheledulu24@gmail.com?subject=Wedding%20Inquiry%20-%20How%20Can%20I%20Help%20You" 
-                              style="text-decoration: none; color: inherit;"
-                              onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
-                              onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
-                              Rocheledulu24@gmail.com
-                            </a>
-                          </p>
+                        <p>
+                          <a
+                            href="mailto:Faoccilayug@gmail.com?subject=Wedding%20Inquiry%20-%20How%20Can%20I%20Help%20You"
+                            style="text-decoration: none; color: inherit"
+                            onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                            onmouseout="this.style.textDecoration='none'; this.style.color='inherit';"
+                          >
+                            Faoccilayug@gmail.com
+                          </a>
+                        </p>
+                        <p>
+                          <a
+                            href="mailto:Rocheledulu24@gmail.com?subject=Wedding%20Inquiry%20-%20How%20Can%20I%20Help%20You"
+                            style="text-decoration: none; color: inherit"
+                            onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                            onmouseout="this.style.textDecoration='none'; this.style.color='inherit';"
+                          >
+                            Rocheledulu24@gmail.com
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -230,19 +242,27 @@
                       </div>
                       <div class="office-info-text">
                         <h5>Call Now</h5>
-                          <p><a href="tel:+639091226365" 
-                                style="text-decoration: none; color: inherit;"
-                                onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
-                                onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                        <p>
+                          <a
+                            href="tel:+639091226365"
+                            style="text-decoration: none; color: inherit"
+                            onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                            onmouseout="this.style.textDecoration='none'; this.style.color='inherit';"
+                          >
                             +63 909 122 6365
-                          </a></p>
+                          </a>
+                        </p>
 
-                          <p><a href="tel:+639763086813" 
-                                style="text-decoration: none; color: inherit;"
-                                onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
-                                onmouseout="this.style.textDecoration='none'; this.style.color='inherit';">
+                        <p>
+                          <a
+                            href="tel:+639763086813"
+                            style="text-decoration: none; color: inherit"
+                            onmouseover="this.style.textDecoration='underline'; this.style.color='#007bff';"
+                            onmouseout="this.style.textDecoration='none'; this.style.color='inherit';"
+                          >
                             +63 976 308 6813
-                          </a></p>
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -281,9 +301,10 @@
           <div class="container">
             <div class="row">
               <div class="col col-xs-12">
-                <p class="copyright" style="margin-top: 15px">
-                  &copy; 2025 #KhelFaoandtheOne. | All rights reserved. |
-                  <a href="contact.html"> Contact Us </a>
+                <p class="copyright">
+                  <span class="line-item">&copy; 2025 #KhelFaoandtheOne.</span>
+                  <span class="line-item">All rights reserved.</span>
+                  <a href="contact.html" class="line-item">Contact Us</a>
                 </p>
               </div>
             </div>
