--- a/gallery.html
+++ b/gallery.html
@@ -366,9 +366,10 @@
           <div class="container">
             <div class="row">
               <div class="col col-xs-12">
-                <p class="copyright" style="margin-top: 15px">
-                  &copy; 2025 #KhelFaoandtheOne. | All rights reserved. |
-                  <a href="contact.html"> Contact Us </a>
+                <p class="copyright">
+                  <span class="line-item">&copy; 2025 #KhelFaoandtheOne.</span>
+                  <span class="line-item">All rights reserved.</span>
+                  <a href="contact.html" class="line-item">Contact Us</a>
                 </p>
               </div>
             </div>
