--- a/groom-bride.html
+++ b/groom-bride.html
@@ -695,26 +695,27 @@
         </section>
         <!-- end wpo-team-section -->
         <!-- start of wpo-site-footer-section -->
-        <footer class="wpo-site-footer-s2">
-            <div class="wpo-lower-footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col col-xs-12">
-                            <p class="copyright" style="margin-top: 15px;">
-                                &copy; 2025 #KhelFaoandtheOne. | All rights reserved. |
-                                <a href="contact.html"> Contact Us </a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+      <footer class="wpo-site-footer-s2">
+        <div class="wpo-lower-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col col-xs-12">
+                <p class="copyright">
+                  <span class="line-item">&copy; 2025 #KhelFaoandtheOne.</span>
+                  <span class="line-item">All rights reserved.</span>
+                  <a href="contact.html" class="line-item">Contact Us</a>
+                </p>
+              </div>
             </div>
-            <div class="ft-shape-1">
-                <img src="assets/images/footer-shape-1.svg" alt="" />
-            </div>
-            <div class="ft-shape-2">
-                <img src="assets/images/footer-shape-2.svg" alt="" />
-            </div>
-        </footer>
+          </div>
+        </div>
+        <div class="ft-shape-1">
+          <img src="assets/images/footer-shape-1.svg" alt="" />
+        </div>
+        <div class="ft-shape-2">
+          <img src="assets/images/footer-shape-2.svg" alt="" />
+        </div>
+      </footer>
         <!-- end of wpo-site-footer-section -->
     </div>
     <!-- end of page-wrapper -->
