--- a/index.html
+++ b/index.html
@@ -834,6 +834,84 @@
       <!-- start of wpo-contact-section -->
       <section class="wpo-contact-section-s2 section-padding" id="rsvp1">
         <div class="container-fluid">
+          <div class="bottom-bg">
+            <svg
+              viewBox="0 0 1920 634"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                class="bg-path"
+                d="M207 286C162.2 87.6 39 44.6667 -17 48L-91 22L-71 726H13L1977 670L1957 424C1926.6 318.4 1815 392 1763 442C1619.8 570 1503.33 495.333 1463 442C1270.2 162.8 1197.33 325.667 1185 442C1159.4 584.4 1117 537.333 1099 496C953.4 192.8 868.333 328.333 844 434C791.2 649.2 649.333 555.667 585 482C455.4 356.4 380.333 429.667 359 482C315 616.4 273.333 547.333 258 496L207 286Z"
+                fill=""
+              ></path>
+              <path
+                class="bg-stroke"
+                d="M207 266C162.2 67.6 39 24.6667 -17 28L-91 2L-71 706H13L1977 650L1957 404C1926.6 298.4 1815 372 1763 422C1619.8 550 1503.33 475.333 1463 422C1270.2 142.8 1197.33 305.667 1185 422C1159.4 564.4 1117 517.333 1099 476C953.4 172.8 868.333 308.333 844 414C791.2 629.2 649.333 535.667 585 462C455.4 336.4 380.333 409.667 359 462C315 596.4 273.333 527.333 258 476L207 266Z"
+                stroke=""
+                stroke-width="2"
+              ></path>
+            </svg>
+
+            <div class="shape-1">
+              <img src="assets/images/rsvp/shape.svg" alt="" />
+            </div>
+            <div
+              class="shape-2 wow fadeInUp"
+              data-wow-duration="1000ms"
+              style="
+                visibility: visible;
+                animation-duration: 1000ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <img src="assets/images/rsvp/shape2.svg" alt="" />
+            </div>
+            <div
+              class="shape-3 wow fadeInUp"
+              data-wow-duration="1200ms"
+              style="
+                visibility: visible;
+                animation-duration: 1200ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <img src="assets/images/rsvp/shape3.svg" alt="" />
+            </div>
+            <div
+              class="shape-4 wow fadeInUp animated"
+              data-wow-duration="1400ms"
+              style="
+                visibility: visible;
+                animation-duration: 1400ms;
+                animation-name: bounce;
+              "
+            >
+              <img src="assets/images/rsvp/shape4.svg" alt="" />
+            </div>
+            <div
+              class="shape-5 wow fadeInUp"
+              data-wow-duration="1600ms"
+              style="
+                visibility: visible;
+                animation-duration: 1600ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <img src="assets/images/rsvp/shape5.svg" alt="" />
+            </div>
+            <div
+              class="shape-6 wow fadeInUp"
+              data-wow-duration="1800ms"
+              style="
+                visibility: visible;
+                animation-duration: 1800ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <img src="assets/images/rsvp/shape6.svg" alt="" />
+            </div>
+          </div>
           <div class="row justify-content-center">
             <div class="col col-xl-4 col-lg-6 col-md-6 col-12">
               <div class="wpo-contact-section-wrapper">
@@ -1125,9 +1203,10 @@
           <div class="container">
             <div class="row">
               <div class="col col-xs-12">
-                <p class="copyright" style="margin-top: 15px">
-                  &copy; 2025 #KhelFaondtheOne. | All rights reserved. |
-                  <a href="contact.html"> Contact Us </a>
+                <p class="copyright">
+                  <span class="line-item">&copy; 2025 #KhelFaoandtheOne.</span>
+                  <span class="line-item">All rights reserved.</span>
+                  <a href="contact.html" class="line-item">Contact Us</a>
                 </p>
               </div>
             </div>
