--- a/wedguide.html
+++ b/wedguide.html
@@ -710,7 +710,7 @@
             height: 100%;
             display: block;
             text-align: center;
-            line-height: 20px;
+            /* line-height: 20px; */
             opacity: 0.75;
           }
 
